# kmeans

./: README.md  fvecs2float.cpp  next_test.cpp  next_test.run  next_test_srnnn.cpp  next_test_srnnn.run  nextrun.sh  svm2norm.cpp
gpu/: README.md
kmeans_cpu/: README.md  km_mbkm_srmbkm.cpp
kmeans_cpu/include/mckm/: mckm.cpp  mckm.h
kmeans_cpu/include/util/: allocation.cpp  dataIo.cpp
kmeans_gpu/: CMakeLists.txt  README.md
kmeans_gpu/include/util/: allocation.h  dataIo.h
kmeans_gpu/km/: CMakeLists.txt  km.cu
kmeans_gpu/mbkm/: CMakeLists.txt  mbkm.cu
kmeans_gpu/srmbkm/: CMakeLists.txt  srmbkm.cu  srmbkm_check.cu
kmeans_gpu_faster/: km.cu
